# jkh_reader_bot

./: .gitignore  docker-compose.yaml  example.env  pyproject.toml
src/: config.py  main.py  provider.py  schemas.py
src/handlers/: __init__.py  echo.py  photo.py
src/middleware/: allowed_users.py
src/services/: base_table_processor_service.py  gemini_table_processor_service.py  local_table_processor_service.py
